# dupfnd

./: CMakeLists.txt  README.md
include/: dupfnd.h  list.h  util.h
src/: CMakeLists.txt  dupfnd.c  main.c  util.c
